Found and fixed bug in Chores dropdown
- Bug was in how the badge_dynamic.js was evaluating data. When I set it to json, it correctly grabs book_club data to populate the milestone_type field. This broke the same field for "chores" though as it needed to intercept the data in json. Rewrite Badge_Dynamic.js to interpret both data types
- Changed milestone-options throughout project to milestone_options to conform with django best practices for urls
-Added badge_dynamic.js to gitignore

Next pressing:
- Make it so editing a created badge does not default to uppermost item in milestone_type field. If this happens, user ill unintentionally select rong choice. Can also put message for user to warn them but this is a bad bandaid.

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ local_settings.py
 *.sublime-workspace
 
 # Static/media files
+!*/staticfiles/admin/js/badge_dynamic.js
 static/
 media/
 staticfiles/
