--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ wheels/
 
 #Migrations (because tes env)
 scheduling/migrations/*
+book_club/migrations/*
+accounts/migrations/*
+chores/migrations/*
+household_main/migrations/*
 
 
 # Database & settings
