--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,12 @@ wheels/
 # Automation scripts
 *.ps1
 
-#Migrations (because tes env)
-scheduling/migrations/*
-book_club/migrations/*
-accounts/migrations/*
-chores/migrations/*
-household_main/migrations/*
+# #Migrations (because tes env)
+# scheduling/migrations/*
+# book_club/migrations/*
+# accounts/migrations/*
+# chores/migrations/*
+# household_main/migrations/*
 
 
 # Database & settings
