--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,11 @@ wheels/
 *.ps1
 
 # #Migrations (because tes env)
-# scheduling/migrations/*
-# book_club/migrations/*
-# accounts/migrations/*
-# chores/migrations/*
-# household_main/migrations/*
+scheduling/migrations/*
+book_club/migrations/*
+accounts/migrations/*
+chores/migrations/*
+household_main/migrations/*
 
 
 # Database & settings
