Added migrations fro dev

--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,12 @@ wheels/
 *.ps1
 
 # #Migrations (because tes env)
-scheduling/migrations/*
-book_club/migrations/*
-accounts/migrations/*
-chores/migrations/*
-household_main/migrations/*
-gaming/migrations/*
+# scheduling/migrations/*
+# book_club/migrations/*
+# accounts/migrations/*
+# chores/migrations/*
+# household_main/migrations/*
+# gaming/migrations/*
 
 
 # Database & settings
